<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/all_discounts"
        android:enabled="true"
        android:title="@string/all"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/food_discounts"
        android:enabled="true"
        android:title="@string/food"
        app:showAsAction="ifRoom|withText"
        />
    />
    <item
        android:id="@+id/fun_discounts"
        android:enabled="true"
        android:title="@string/fun"
        app:showAsAction="ifRoom|withText" />
    />
    <item
        android:id="@+id/hotel_car_discounts"
        android:enabled="true"
        android:title="@string/hotel_car"
        app:showAsAction="ifRoom|withText" />
</menu>